--- a/src/component/product-list/product-list.component.html
+++ b/src/component/product-list/product-list.component.html
@@ -1,1 +1,24 @@
 <p>product-list works!</p>
+<div class="container">
+    <h3 *ngIf="products.length <1" class="text-info"> No Products Found. </h3>
+    <table *ngIf="products.length >0" class="table table-striped">
+      <thead>
+        <tr>
+          <th>id</th>
+          <th>brandName</th>
+          <th>Price</th>
+          <th>color</th>
+          <th>quantity</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor='let product of products; let i=index'>
+          <td>{{product.id}}</td>
+          <td>{{product.name}}</td>
+          <td>{{product.price}}</td>
+          <td>{{product.color}}</td>
+          <td>{{product.quantity}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
