--- a/src/component/product-list/product-list.component.html
+++ b/src/component/product-list/product-list.component.html
@@ -1,4 +1,5 @@
-<p>product-list works!</p>
+
+<br>
 <div class="container">
     <h3 *ngIf="products.length <1" class="text-info"> No Products Found. </h3>
     <table *ngIf="products.length >0" class="table table-striped">
@@ -6,6 +7,7 @@
         <tr>
           <th>id</th>
           <th>brandName</th>
+          <th>modelName</th>
           <th>Price</th>
           <th>color</th>
           <th>quantity</th>
@@ -14,10 +16,14 @@
       <tbody>
         <tr *ngFor='let product of products; let i=index'>
           <td>{{product.id}}</td>
-          <td>{{product.name}}</td>
+          <td>{{product.brandName}}</td>
+          <td>{{product.modelName}}</td>
           <td>{{product.price}}</td>
           <td>{{product.color}}</td>
           <td>{{product.quantity}}</td>
+          <td><button>Buy</button></td>
+          <td><button>Add to Cart</button></td>
+
         </tr>
       </tbody>
     </table>
