customer module completed

--- a/src/component/header/header.component.html
+++ b/src/component/header/header.component.html
@@ -1,7 +1,10 @@
 
-<h1 class>Online mobile store</h1>
-<div class="container">
-    <button >Login</button>
-    <button class="top-end-button">Register</button>
-  </div>
-  
+<header>
+    <h1>Online Mobile Store</h1>
+<div class="right-corner">
+<nav>
+    <button (click)="redirectLoginComponent()" class="register-btn">Login</button>
+<button (click)="redirectRegisterComponent()" class="register-btn">Register</button>
+</nav>
+</div>
+</header>
