--- a/src/component/product-list/product-list.component.html
+++ b/src/component/product-list/product-list.component.html
@@ -149,7 +149,7 @@
                       
                       <hr>
                       <div class="heading">
-                      <button class="btn btn-success" >Buy</button>
+                      <button class="btn btn-success" (click)="navigateToPayment()" >Buy</button>
                     </div>
                     </div>
                   
